# novitas

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  env.production.example  env.staging.example  env.testing.example  implementation_plan.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  daily-improvement.yml  release.yml
docs/: architecture.md  contributing.md  index.md
examples/: langchain_memory_usage.py  llm_usage.py  orchestrator_demo.py
scripts/: config.py  setup-docker-env.sh
src/novitas/: __init__.py  cli.py  main.py
src/novitas/agents/: __init__.py  agent_factory.py  base.py  code_agent.py  communication.py  lifecycle.py  llm_provider_selector.py  memory.py  orchestrator.py
src/novitas/config/: __init__.py  logging.py  settings.py
src/novitas/core/: __init__.py  events.py  exceptions.py  models.py  protocols.py  schemas.py
src/novitas/database/: connection.py  models.py  repositories.py
src/novitas/database/migrations/: env.py
src/novitas/database/migrations/versions/: d15e3dac73c5_initial_database_schema.py
src/novitas/llm/: __init__.py  client_adapter.py  provider.py
src/novitas/messaging/: __init__.py  broker.py
src/novitas/prompts/: code_agent.txt  orchestrator.txt  test_agent.txt
tests/: conftest.py
tests/unit/: test_cli.py  test_main.py
tests/unit/test_agents/: test_agent_factory.py  test_base.py  test_code_agent.py  test_langchain_memory.py  test_llm_provider_selector.py  test_orchestrator.py
tests/unit/test_config/: test_logging.py
tests/unit/test_core/: test_memory_models.py  test_models.py
tests/unit/test_database/: test_connection.py  test_connection_extended.py  test_models.py  test_repositories.py  test_simple.py
tests/unit/test_llm/: __init__.py  test_provider.py
